test/end-to-end/compile-errors/extern-errors.crow
main void()
	()

r record extern
	a string
	b nat64 list

r2 record by-val, extern
	a nat64

r3 record by-ref, extern
	a nat64

u union extern
	a string

f void() extern

f void() c extern

f string() c extern

f void(a string) c extern

f[t] void(a t) c extern

f void(...a nat64 array) c extern

some-spec spec
	foo void()

f void() c extern, some-spec

f void() bare, c extern

f void() unsafe, c extern

g global(nat) c extern

g global(nat)

g2 global(nat) builtin, c extern

g3 global(nat) extern, bare, nat equal

tl thread-local(nat) c extern, nat equal
